backend/k8s/app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task-manager-backend
  labels:
    app: task-manager-backend
spec:
  containers:
    - name: app
      image: "saiiru/task-manager-backend:latest"
      ports:
        - containerPort: 8080
      resources:
        limits:
          memory: "512Mi"
          cpu: "500m"
        requests:
          memory: "256Mi"
          cpu: "250m"
