backend/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: dev
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
